[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pq-agile-chain"
version = "0.3.0"
description = "Account-based post-quantum blockchain demo with encrypted wallets, replay validation, and on-chain key rotation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Team JRTI" },
]
maintainers = [
  { name = "Team JRTI" },
]
dependencies = [
  "pqcrypto>=0.4.0",
  "cryptography>=45",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "httpx>=0.28",
  "pytest>=8.3",
]

[project.scripts]
pq-agile-chain = "pq_agile_chain.cli:main"
pq-agile-chain-web = "pq_agile_chain.web:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
